<resources>
    <string name="app_name">British Heritage</string>
    <string name="unable_to_find_location">Unable to find your location. Please ensure location services are enabled.
    </string>
    <string name="please_install_maps">Please Install a Maps Application.</string>
    <string name="park">Park or Garden</string>
    <string name="listedbuilding">Listed Building</string>
    <string name="battlefield">Battlefield</string>
    <string name="scheduled_monument">Scheduled Monument</string>
    <string name="hillfort">Hillfort</string>
    <string name="arch_map">Monuments</string>
    <string name="listed_building_string">Buildings</string>
    <string name="home">Home</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="press_the_button_to_check_in">Press the button to check in</string>
    <string name="point_of_interest">Points of interest:</string>
    <string name="landmark_user_description">What can you see here?</string>
    <string name="choose_your_username">Choose your username</string>
    <string name="enter_your_email">Email address...</string>
    <string name="choose_a_password">Choose a password...</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="or">or</string>
    <string name="please_enter_a_username">Please enter a username of between 8 and 25 characters</string>
    <string name="please_enter_an_email_address">Please enter a valid email address</string>
    <string name="please_enter_a_password_of_eight_chars">Please enter a password of 8 characters or more</string>
    <string name="login_failure">Login failed. Please try again!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="points">Score: %d</string>
    <string name="username">UsernameUsernameUser1</string>
    <string name="username2">User2</string>
    <string name="review_feedback">Tell people about this place</string>
    <string name="review_title">Give your review a descriptive title</string>
    <string name="save_review">Add Review</string>
    <string name="title_error">Your title must be between 5 and 40 characters</string>
    <string name="review_error">Your review must be less than 400 characters long</string>
    <string name="failed_to_add_review">Failed to save review</string>
    <string name="write_review">Write review...</string>
    <string name="failed_to_upload_photo">Failed to upload photo</string>
    <string name="uploaded_photo">Successfully uploaded photo</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="check_in_message">You have explored this site!</string>
    <string name="not_within_area">You need to be within the area to check in successfully</string>
    <string name="something_went_wrong">Sorry, something went wrong</string>
    <string name="places_you_have_visited">Places you have visited</string>
    <string name="places_you_have_explored">Places you have explored</string>
    <string name="your_favourite_places">Your favourite places</string>
    <string name="temp_favourite_text">This is where your favourite places will be shown</string>
    <string name="temp_checked_in_landmarks">This is where any sites you have visited or reviewed will be shown</string>
    <string name="points_added">"You have earned %d points  "</string>
    <string name="point_added">"You have earned %d point  "</string>
    <string name="top_users">Highest scoring explorers:</string>
    <string name="number_of_reviews">Number of reviews: %d</string>
    <string name="number_of_check_ins">Places visited: %d</string>
    <string name="short_review_error">Your review should be more than 150 characters</string>
    <string name="review_not_valid">I suspect this is nonsense! Please try again.</string>
    <string name="rank">Rank: %s</string>
    <string name="logout">Sign out</string>
    <string name="already_have_an_account">Already have an account?\nClick <b>here</b> to sign in </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_favs">Delete all your favourites?</string>
    <string name="confirm">Confirm:</string>
    <string name="delete_checked_in">"Delete the places you have visited?\n\nThis will also reset your score to zero"</string>
    <string name="important_info">Important Information</string>
    <string name="scheduled_monument_laws"><b>The 1979 Ancient Monuments Act makes it illegal to:</b>\n\n• Destroy or damage a scheduled monument\n\n• Use a metal detector without prior consent\n\n• Remove any historical or archaeological object from a site without prior consent\n</string>
    <string name="ok">O.K</string>
    <string name="view_website">Visit\nWebsite</string>
    <string name="view_more">View More</string>
    <string name="blue_plaque">Blue Plaque</string>
    <string name="plaques">Plaques</string>
    <string name="enter_your_query">Search here...</string>
    <string name="england">England</string>
    <string name="scotland">Scotland</string>
    <string name="wales">Wales</string>
    <string name="skip_login">Skip sign-up process</string>
    <string name="cancel">Cancel</string>
    <string name="login_silently">Continuing without signing up will mean that you won\'t be able to retrieve your favourite landmarks or the places you have visited should you switch devices or sign-out. Is this ok?</string>
    <string name="ignore_sign_in">Don\'t Sign In?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email2">Enter your email</string>
    <string name="please_enter_a_valid_email">Please Enter A Valid Email Address</string>
    <string name="password_has_been_reset">Your Password Has Been Reset</string>
    <string name="please_check_your_email">Please check your email to reset your password</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_password">Enter password...</string>


</resources>
