<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash_viewgroup"
        android:background="@drawable/avebury"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity">

    <ImageView
        android:alpha="0"
        android:visibility="invisible"
        android:tag="splash_component"
        android:id="@+id/logo_temp_view"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0.4"
        android:src="@mipmap/ic_launcher_round"/>

    <View
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:id="@+id/splash_transparency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:background="@drawable/white_circle_coloraccent_outline"
        android:id="@+id/splash_username"
        style="@style/SearchBar"
        android:hint="@string/choose_your_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        tools:visibility="visible"
        android:visibility="invisible"
        android:id="@+id/splash_username_error"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@id/splash_username"
        app:layout_constraintTop_toBottomOf="@id/splash_username"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:text="@string/please_enter_a_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:alpha="0"
        tools:alpha="1f"
        android:tag="splash_component"
        android:background="@drawable/white_circle_coloraccent_outline"
        android:id="@+id/splash_email"
        style="@style/SearchBar"
        android:hint="@string/enter_your_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_username"
        />

    <TextView
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        tools:visibility="visible"
        android:visibility="invisible"
        android:id="@+id/splash_email_error"
        android:layout_marginTop="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@id/splash_email"
        app:layout_constraintTop_toBottomOf="@id/splash_email"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:text="@string/please_enter_an_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:background="@drawable/white_circle_coloraccent_outline"
        android:id="@+id/splash_password"
        style="@style/SearchBar"
        android:hint="@string/choose_a_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_email"
        />

    <TextView
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        tools:visibility="visible"
        android:visibility="invisible"
        android:id="@+id/splash_password_error"
        android:layout_marginTop="0dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@id/splash_password"
        app:layout_constraintTop_toBottomOf="@id/splash_password"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:text="@string/please_enter_a_password_of_eight_chars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:tag="splash_component"
        android:alpha="0"
        tools:alpha="1f"
        android:elevation="20dp"
        android:id="@+id/splash_sign_in_button"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up_with_google"
        android:background="@drawable/common_google_signin_btn_text_light_normal"
        android:foreground="@drawable/transparent_circle_coloraccent_outline"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_circle_coloraccent_outline"
        app:layout_constraintBottom_toBottomOf="@id/splash_sign_in_button"
        app:layout_constraintEnd_toEndOf="@id/splash_sign_in_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/splash_sign_in_button"
        app:layout_constraintTop_toTopOf="@id/splash_sign_in_button"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/splash_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_circle_coloraccent_outline"
        android:drawableEnd="@drawable/enter_icon_bluish"
        android:drawablePadding="16dp"
        android:padding="12dp"
        android:shadowColor="@color/trans_white"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_password" />

    <ProgressBar
        tools:alpha="1f"
        android:alpha="0"
        android:tag="splash_component"
        android:visibility="invisible"
        android:elevation="20dp"
        android:id="@+id/splash_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:tag="splash_component"
        tools:alpha="1f"
        android:alpha="0"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/switch_to_login_screen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:tag="splash_component"
        tools:alpha="1f"
        android:alpha="0"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="12sp"
        android:id="@+id/skip_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/skip_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:tag="splash_component"
        tools:alpha="1f"
        android:alpha="0"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textSize="12sp"
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>