<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_accent_gradient_long"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/add_review_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_review_title" />

            <TextView
                android:id="@+id/add_review_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/color_primary_gradient_long"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Crypt Chambers" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_review_title_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/paleGrey"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:counterOverflowTextAppearance="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_review_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_review_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/review_title"
                    android:maxLines="1"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_review_text_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/paleGrey"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:counterEnabled="true"
                app:counterMaxLength="350"
                app:counterOverflowTextAppearance="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_review_title_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_review_text_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:height="300dp"
                    android:gravity="top"
                    android:hint="@string/review_feedback"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_review_save_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/white_circle_coloraccent_outline"
                android:shadowColor="@color/colorPrimary"
                android:text="@string/save_review"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_review_text_input" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>